Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82313

The qmlRegisterSingletonInstance() function is not documented

    XMLWordPrintable

Details

    • 410f835a40bda737c8933fe630251752fba2ba4f (qt/qtdeclarative/5.15)

    Description

      Qt 5.14 introduced the qmlRegisterSingletonInstance() function, however, I can't find any documentation about it.

      Attachments

        1. QTBUG-82313.png
          240 kB
          赵 宇航
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            docteam Qt Documentation Team
            wangwenx190 赵 宇航
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes