Doc: Fix documentation warnings for Qt QML

Fixes: QTBUG-82313
Change-Id: I7c2f30411ab8011254d7c232c87cb12a39761bda
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>