src/qml/doc/snippets/qml/qml-documents/Images.qml
@@ -81,4 +81,4 @@ Item {
     }
     property LabeledImage selectedImage: before
 }
-// Images.qml
+//! [document]
